tests/corpus/negative/N08-generator/source.py
def numbers():
    yield 1

